# Lab2_Graphs

./: .gitignore  0IGenerator.h  10TreeGraphGenerator.cpp  10TreeGraphGenerator.h  11CycleGraphGenerator.cpp  11CycleGraphGenerator.h  12WheelGraphGenerator.cpp  12WheelGraphGenerator.h  13CubicGraphGenerator.cpp  13CubicGraphGenerator.h  1ComponentsGraphGenerator.cpp  1ComponentsGraphGenerator.h  2BipartiteGraphGenerator.cpp  2BipartiteGraphGenerator.h  3StarGraphGenerator.cpp  3StarGraphGenerator.h  4PathGraphGenerator.cpp  4PathGraphGenerator.h  5RandomGraphGenerator.cpp  5RandomGraphGenerator.h  6BridgesGraphGenerator.cpp  6BridgesGraphGenerator.h  7ArticulationPointsGenerator.cpp  7ArticulationPointsGenerator.h  8HalinGraphGenerator.cpp  8HalinGraphGenerator.h  9TwoBridgesGraphGenerator.cpp  9TwoBridgesGraphGenerator.h  AdjacencyMatrixParser.cpp  AdjacencyMatrixParser.h  CMakeLists.txt  DIMACSParser.cpp  DIMACSParser.h  EdgeListParser.cpp  EdgeListParser.h  Graph.cpp  Graph.h  GraphParser.h  README.md  TextWriter.cpp  (+4 more)
Metrics/: ArticulationPointsCalculator.cpp  ArticulationPointsCalculator.h  ConnectedComponentsCalculator.cpp  ConnectedComponentsCalculator.h  DensityCalculator.cpp  DensityCalculator.h  DiameterCalculator.cpp  DiameterCalculator.h  TransitivityCalculator.cpp  TransitivityCalculator.h
src/: dummy.cpp
tests/: CMakeLists.txt  test_main.cpp
